--- a/style.css
+++ b/style.css
@@ -41,14 +41,6 @@ body {
     color: crimson;
     padding-right: 0.5rem;
 }
-.navbar a:hover {
-    background: crimson;
-    padding-bottom: 6rem;
-}
-
-.navbar a:hover i {
-    color: #fff;
-}
 
 section {
     padding: 5rem 9%;
@@ -70,7 +62,7 @@ section {
 .home .image img {
     height: 50rem;
     width: 50rem;
-    /* border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%; */
+    border-radius: 9% 9% 9% 9%;
     width: 60%; /* Adjust the width of the image */
     border: 2px solid red;
 }
@@ -119,9 +111,6 @@ section {
     margin-left: 1rem;
     text-align: center;
     transition: 0.2s linear;
-}
-.btn:hover i {
-    margin-left: 2rem;
 }
 
 .heading {
@@ -192,7 +181,8 @@ section {
 }
 
 .skills .box-container {
-    display: grid;
+    display: flex;
+    justify-content: space-around;
     grid-template-columns: repeat(auto-fill, minmax(16rem, 1fr));
     gap: 1.5rem;
 }
@@ -265,7 +255,7 @@ section {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(31rem, 1fr));
     gap: 1.5rem;
-    margin-bottom: 2rem;
+    margin-bottom: 20rem;
 }
 
 .portfolio .box-container .box {
@@ -319,73 +309,6 @@ section {
     color: #fff;
 }
 
-.blogs .box-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(31rem, 1fr));
-    gap: 1.5rem;
-}
-.blogs .box-container .box {
-    text-align: center;
-    padding: 2rem;
-    border-radius: 0.5rem;
-    background: #1a1a1a;
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.7);
-}
-
-.blogs .box-container .box .image {
-    height: 25rem;
-    width: 100%;
-    border-radius: 0.5rem;
-    overflow: hidden;
-}
-
-.blogs .box-container .box .image img {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    transition: 0.2s linear;
-}
-
-.blogs .box-container .box:hover .image img {
-    transform: scale(1.2);
-}
-
-.blogs .box-container .box .content .icons {
-    position: relative;
-    top: -1rem;
-    border-radius: 0.5rem;
-    padding: 1.5rem;
-    background: #000;
-    display: inline-block;
-}
-
-.blogs .box-container .box .content .icons a {
-    font-size: 1.4rem;
-    margin: 0 1rem;
-    color: #fff;
-}
-
-.blogs .box-container .box .content .icons a:hover {
-    color: crimson;
-}
-
-.blogs .box-container .box .content .icons a i {
-    padding-right: 0.5rem;
-    color: crimson;
-}
-
-.blogs .box-container .box .content h3 {
-    font-size: 2rem;
-    color: #fff;
-    font-weight: normal;
-}
-
-.blogs .box-container .box .content p {
-    font-size: 1.5rem;
-    line-height: 2;
-    padding: 1rem 0;
-    color: #aaa;
-}
 .contact .row {
     display: flex;
     align-items: center;
@@ -435,10 +358,6 @@ section {
     margin-right: 0.3rem;
     color: #fff;
 }
-.contact .row .info-container .share a:hover {
-    background: crimson;
-}
-
 .contact .row form {
     flex: 1 1 42rem;
 }
@@ -471,17 +390,30 @@ section {
     cursor: pointer;
     padding: 1rem 3rem;
 }
-.contact .row form .btn:hover {
-    background: #fff;
-    color: #0d0d0d;
-}
 
 @media (max-width: 1200px) {
     html {
-        font-size: 55%;
+        font-size: 64%;
     }
     section {
         padding: 3rem 2rem;
+    }
+    .home .image img {
+        height: 43rem;
+        width: 80%;
+    }
+    .education .box-container {
+        display: block;
+    }
+    .education .box-container .box {
+        margin-top: 20px;
+    }
+    .portfolio .box-container {
+        display: inline-block;
+        margin-bottom: 20rem;
+    }
+    .portfolio .box-container .box {
+        margin-top: 60px;
     }
 }
 
@@ -521,5 +453,9 @@ section {
 @media (max-width: 450px) {
     html {
         font-size: 50%;
+    }
+    .home .image img {
+        height: 30rem;
+        width: 88%;
     }
 }
